# WeatherAPP

./: CMakeLists.txt  main.cpp  mermaid_diagrams.md  qtWeatherapp.md  天气预报UI重构demo.html  页面切换动画说明.md
.cache/clangd/index/: AppStateManager.cpp.EF9A454470DCF548.idx  AppStateManager.hpp.7F9AC010E9912224.idx  NavigationViewModel.cpp.2191771885D960B3.idx  NavigationViewModel.hpp.93CD2D071BEB87C4.idx  WeatherAPIClient.cpp.35CE0AEDF31E2CDC.idx  WeatherAPIClient.hpp.5AA011C66D0EA6C8.idx  WeatherDataModel.cpp.2E7B1A00DCD6DF79.idx  WeatherDataModel.hpp.CEAA268A2836CAF1.idx  WeatherDataService.cpp.11677617B83AB613.idx  WeatherDataService.hpp.D1BAEA83BB50AC69.idx  WeatherViewModel.cpp.B92890439CB1C286.idx  WeatherViewModel.hpp.1B02CD20B0639593.idx  main.cpp.2FE2F2D890246E43.idx
QMLFrontend/: Main.qml
QMLFrontend/animations/: ContentAreaStyle.qml  EdgeBlurEffect.qml  GlassEffect.qml  GradientBackground.qml  PageTransition.qml  README.md  RecentCitiesPagerStyle.qml  SidebarStyle.qml  qmldir
QMLFrontend/components/: qmldir
QMLFrontend/components/DetailedInfo/: DetailedInfoItem.qml  DetailedInfoLabel.qml  qmldir
QMLFrontend/components/RecentCityPager/: CityDisplayCard.qml  PageIndicator.qml  RecentCitiesManager.qml  qmldir
QMLFrontend/components/TempratureTrend/: TemperatureChart.qml  TempratureTrendItem.qml  TempratureTrendItemDelegate.qml  qmldir
QMLFrontend/components/TodaysWeather/: TodaysWeatherItem.qml
QMLFrontend/components/common/: CityNameLabel.qml  DragArea.qml  SearchBar.qml  SunsetSunriseitem.qml  WindowControls.qml
QMLFrontend/components/navigation/: MenuItem.qml  NavigationMenu.qml
QMLFrontend/layouts/: ContentArea.qml  RecentCitiesPager.qml  SideBar.qml  qmldir
QMLFrontend/models/: AppStateManager.qml  WeatherDataModel.qml  qmldir
QMLFrontend/services/: WeatherDataService.qml  qmldir
QMLFrontend/viewmodels/: NavigationViewModel.qml  WeatherViewModel.qml  qmldir
QMLFrontend/views/: BaseView.qml  DetailedInfoView.qml  SunriseSunsetView.qml  TemperatureTrendView.qml  TodayWeatherView.qml  qmldir
include/commonDataType/: WeatherDataModel.hpp
include/models/: AppStateManager.hpp
include/services/: WeatherAPIClient.hpp  WeatherDataService.hpp
include/viewmodels/: NavigationViewModel.hpp  WeatherViewModel.hpp
src/models/: AppStateManager.cpp  WeatherDataModel.cpp
src/services/: WeatherAPIClient.cpp  WeatherDataService.cpp
src/viewmodels/: NavigationViewModel.cpp  WeatherViewModel.cpp
